fix: stop colors from overlapping in the color picker

--- a/scss/ColorPickers/ColorPickers.scss
+++ b/scss/ColorPickers/ColorPickers.scss
@@ -6,7 +6,7 @@
       width: 320px !important;
 
       > span {
-        display: block;
+        display: inline-block;
         height: 100%;
 
         > div {
